--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "refund-component-library",
   "version": "0.0.0-development",
   "private": true,
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
