--- a/package.json
+++ b/package.json
@@ -57,5 +57,13 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/nicolasmendonca/refund-component-library.git"
-  }
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ]
 }
